@@ -15,6 +15,9 @@ RELEASE NOTES
 
 2.43.3 - November ??, 2011
 
+    Updated the Lean Prolog config file, adding index/1 directives for some
+    of the dynamic predicates used by the internal Logtalk runtime tables.
+
     Updated the SWI-Prolog integration files to test for the availability
     of the index/1 directive, which is deprecated by the new experimental
     SWI-Prolog support for just-in-time multi-argument indexing.
